# c-sandbox

./: .gitignore  CMakeLists.txt  README.md  SConstruct
code/default/: CMakeLists.txt
code/default/src/default/: CMakeLists.txt
code/misc/: .gitignore  CMakeLists.txt
code/pong/: CMakeLists.txt  README.md
code/pong/src/pong/: CMakeLists.txt  action.c  action.h  game.c  main.c  midfield.h  object.h  player.c  render.h  score.c  score.h  shade.c  shade.h  utils.c  utils.h  wall.c  wall.h
code/sdl2/: CMakeLists.txt  sdl2.c  sdl2_ttf.h
code/sdl2/src/sdl2/: CMakeLists.txt  engine.c  events.c  macros.h  resize_test.c  sdl2.c  text.c  text.h
code/sdl2/tools/: setup_deps.sh
code/utils/: CMakeLists.txt  array.h  macros.h  random.h
code/utils/src/utils/: array.c  random_test.c  str.h
code/utils/tools/: setup_deps.sh
default/: CMakeLists.txt  SConscript  random-test.c  syntax-tests.c
games/: SConscript
games/pong/: SConscript  ball.c  ball.h  main.c  player.c  player.h  pong.c  pong.h  render.c  render.h  utils.c  utils.h  wall.c  wall.h
pong/: CMakeLists.txt  README.md  SConscript  action.c  action.h  app.c  app.h  ball.c  ball.h  event.c  event.h  events.c  events.h  game.c  game.h  main.c  midfield.c  midfield.h  object.h  player.c  player.h  pong.c  pong.h  score.c  score.h  shade.c  shade.h  utils.h  wall.h
scripts/: build.sh  build_compile_commands.sh  download_deps.sh  setup_vim_project.sh
scripts/stubs/: CMakeLists.txt  projections.json  shenv
sdl2/: CMakeLists.txt  SConscript  engine.c  engine.h  events.c  macros.h  resize-test.c  sdl2.c  sdl2.h  sdl2_ttf.c  text.c  text.h  time-test.c  timer.c  timer.h
templates/tools/: setup_deps.sh
tools/: download_deps.sh
utils/: macros.h  random.cpp  str.h  str_test.c
